[gd_scene load_steps=2 format=3 uid="uid://crfmejhjrobw8"]

[ext_resource type="Script" uid="uid://c1xehgl86jftp" path="res://scenes/ui/combat_scene.gd" id="1_e0bma"]

[node name="CombatScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e0bma")

[node name="PlayerInfo" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 450.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerInfo"]
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="PlayerInfo/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Hoàng Hồng Huy"

[node name="PlayerHPLabel" type="Label" parent="PlayerInfo/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HP: 100 / 100"

[node name="PlayerSELabel" type="Label" parent="PlayerInfo/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Linh Khí: 100 / 100"

[node name="EnemyInfo" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 650.0
offset_top = 100.0
offset_right = 1050.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyInfo"]
layout_mode = 2

[node name="EnemyNameLabel" type="Label" parent="EnemyInfo/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Hắc Hổ Yêu"

[node name="EnemyHPLabel" type="Label" parent="EnemyInfo/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HP: ?? / ??"

[node name="ActionPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="ActionButtons" type="HBoxContainer" parent="ActionPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="AttackButton" type="Button" parent="ActionPanel/ActionButtons"]
layout_mode = 2
text = "Tấn Công"

[node name="SkillButton" type="Button" parent="ActionPanel/ActionButtons"]
layout_mode = 2
text = "Kỹ Năng"

[node name="ItemButton" type="Button" parent="ActionPanel/ActionButtons"]
layout_mode = 2
text = "Vật Phẩm"

[node name="FleeButton" type="Button" parent="ActionPanel/ActionButtons"]
layout_mode = 2
text = "Bỏ Chạy"

[node name="DefendButton" type="Button" parent="ActionPanel/ActionButtons"]
layout_mode = 2
text = "Phòng Ngự"

[node name="CombatLog" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
text = "Trận đấu bắt đầu!"

[node name="SkillPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 300.0
offset_top = 150.0
offset_right = 800.0
offset_bottom = 450.0

[node name="SkillListContainer" type="VBoxContainer" parent="SkillPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="ItemPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 300.0
offset_top = 150.0
offset_right = 800.0
offset_bottom = 450.0

[node name="ItemListContainer" type="VBoxContainer" parent="ItemPanel"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="ActionPanel/ActionButtons/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="ActionPanel/ActionButtons/SkillButton" to="." method="_on_skill_button_pressed"]
[connection signal="pressed" from="ActionPanel/ActionButtons/ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="ActionPanel/ActionButtons/DefendButton" to="." method="_on_defend_button_pressed"]
